--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,32 +1,59 @@
+*{
+    font-family: 'B Koodak';
+}
 #main{
     width:100%;
-
-}
-#main img{
-    width: 100%;
-    height: 80%;
+    /*background-image: url("public/images/72.jpg");*/
 }
 #items{
-    width: 25%;
-    height: 27%;
-    bottom: 50%;
-    right: 36%;
+    width: 28%;
+    height: 110px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    justify-items: flex-start;
+    justify-content: space-around;
+    align-items: center;
     flex-direction: row;
+    margin:-26% auto;
 }
-#items div{
-    width: 40%;
-    height: 20%;
-    background: #253A3F;
-    border-radius: 3%;
-    text-align: center;
-    margin: auto;
-    cursor: pointer;
+.item{
+    width: 45%;
+
+
+}
+.item button{
+    width: 100%;
+    background: #4B72AE;
+    color: white;
+    /*background: #4B72AE;*/
+    /*border-radius: 3%;*/
+    /*text-align: center;*/
+    /*padding-top:1.5% ;*/
+    /*cursor: pointer;*/
+    /*color: white;*/
+}
+.item button:hover{
+    background: #3A5157;
     color: white;
 }
-#items div:hover{
+.nav-link{
+    color: #545454;
+
+}
+#app_download{
+    background: #4B72AE;
+}
+#app_download:hover{
     background: #3A5157;
 }
+.nav-item a{
+    text-decoration: none;
+    color: #545454;
+    padding: 12px 12px;
+
+}
+.nav-item a:hover{
+    border-bottom: 2px solid;
+    box-sizing: border-box;
+}
+
+
